# EfficientEntityClusteringPackage

./: .gitignore  README.md  setup.py
package/: pyproject.toml
package/eec/: __init__.py  entity_clusterer_bridge.py
package/eec/core/abstract/cluster_repository/: __init__.py  i_cluster_repository.py
package/eec/core/abstract/entity_repository/: __init__.py  i_entity_repository.py
package/eec/core/abstract/mention_clustering_method/: __init__.py  i_mention_clustering_method.py
package/eec/core/abstract/user_repository/: __init__.py  i_user_repository.py
package/eec/core/data_model/: __init__.py
package/eec/core/data_model/cluster_model/: __init__.py  cluster_model.py
package/eec/core/data_model/entity_model/: __init__.py
package/eec/core/data_model/user_model/: __init__.py  user_model.py
package/eec/core/exceptions/: __init__.py
package/eec/implementation/base/: __init__.py
package/eec/implementation/base/mention_clustering_methods/: __init__.py  base_mention_clustering_method.py
package/eec/implementation/base/repositories/: base_cluster_repository.py  base_entity_repository.py  base_user_repository.py
package/eec/implementation/neo4j/: __init__.py
package/eec/implementation/neo4j/exceptions/: __init__.py
package/eec/implementation/neo4j/mention_clustering_methods/: __init__.py  neo4j_mention_clustering_method.py
package/eec/implementation/neo4j/repositories/: __init__.py  neo4j_cluster_repository.py  neo4j_entity_repository.py  neo4j_user_repository.py
package/eec/implementation/neo4j/services/neo4j_service/: __init__.py  (+1 more)
(+174 files in other folders)
